# nfc_preliminary

./: .gitignore  CMakeLists.txt  nfc_preliminary.cpp  sim1.csv  things_to_do.md
..build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  nfc_preliminary.sln
..build/.cmake/api/v1/reply/: cache-v2-099ca652ca596912a943.json  cmakeFiles-v1-dc6022ae57ce2a35812e.json  codemodel-v2-c342950f81690836429d.json  directory-Source.adjoint-Debug-7ba05fc20467c5233c05.json  directory-adjoint_tests-Debug-fbbf7b32b7357109cf4a.json  directory-externals.cppad-Release-49d1ee7f6f730645d865.json  directory-main_executables-Release-8b7ca59fb03087a36188.json  index-2024-10-08T08-47-37-0903.json  target-0-rotations-Debug-8c60b995a76cdb69d658.json  target-0-rotations-MinSizeRel-70bebd3c0cd0a85c160a.json  target-0-rotations-RelWithDebInfo-185c7af70dc38e1081e6.json  target-0-rotations-Release-68955f012a7d04878c76.json  target-1-Forces_check-Debug-0a80cbccde6aa0c812db.json  target-1-Forces_check-MinSizeRel-ab138ab4156a5acc158d.json  target-1-Forces_check-RelWithDebInfo-44743937e4600f62b027.json  target-1-Forces_check-Release-fc4ebacd97e9ed7262ca.json  target-1-takeoff-Debug-6e07d18997150dc1ed9e.json  target-1-takeoff-MinSizeRel-5a6014e876396b1580c1.json  target-1-takeoff-RelWithDebInfo-8cf4f3b809b6bfdd2385.json  target-1-takeoff-Release-26a43eec2747ed1a3db6.json  target-2-autodiff_vs_centraldiff-Debug-49563df1ca1e6ea11046.json  target-2-autodiff_vs_centraldiff-MinSizeRel-44c32e59898d3ec5b5aa.json  target-2-autodiff_vs_centraldiff-RelWithDebInfo-8020c3eb169df0adfb61.json  target-2-autodiff_vs_centraldiff-Release-fbd0fa0dc062c64806a3.json  target-2-climb_const_gamma-Debug-1d0a9139a6c15e48135e.json  target-2-climb_const_gamma-MinSizeRel-358cacc093bb89462818.json  target-2-climb_const_gamma-RelWithDebInfo-a1a4eba25edc3712b86d.json  target-2-climb_const_gamma-Release-95daac537263ef7f4551.json  (+78 more)
..build/Source/: aero.vcxproj  aero.vcxproj.filters  cmake_install.cmake  nfc.vcxproj  nfc.vcxproj.filters
..build/Source/Debug/: aero.lib
..build/Source/adjoint/: aero_adjoint.vcxproj  aero_adjoint.vcxproj.filters  cmake_install.cmake
..build/Source/adjoint/Debug/: aero_adjoint.lib
..build/adjoint_tests/: 1-Forces_check.vcxproj  1-Forces_check.vcxproj.filters  2-autodiff_vs_centraldiff.vcxproj  2-autodiff_vs_centraldiff.vcxproj.filters  3-Primal-Adjoint-run.vcxproj  3-Primal-Adjoint-run.vcxproj.filters  4-jacobians.vcxproj  4-jacobians.vcxproj.filters  5-adjoint-sensitivities.vcxproj  5-adjoint-sensitivities.vcxproj.filters  6-optimization-climb.vcxproj  6-optimization-climb.vcxproj.filters  7-debug-primal.vcxproj  7-debug-primal.vcxproj.filters  cmake_install.cmake
..build/main_executables/: cmake_install.cmake  endurance_example.vcxproj  endurance_example.vcxproj.filters  main.vcxproj  main.vcxproj.filters  maneuver_example.vcxproj  maneuver_example.vcxproj.filters  simulation_1.vcxproj  simulation_1.vcxproj.filters
..build/tests/: 0-rotations.vcxproj  0-rotations.vcxproj.filters  1-takeoff.vcxproj  1-takeoff.vcxproj.filters  2-climb_const_gamma.vcxproj  2-climb_const_gamma.vcxproj.filters  3-climb-theta_t.vcxproj  3-climb-theta_t.vcxproj.filters  4-control-thrust.vcxproj  4-control-thrust.vcxproj.filters  5-primal-debug.vcxproj  5-primal-debug.vcxproj.filters  class_UAV.vcxproj  class_UAV.vcxproj.filters  class_aerodynamics.vcxproj  class_aerodynamics.vcxproj.filters  cmake_install.cmake  test0_aerodynamics.vcxproj  test0_aerodynamics.vcxproj.filters  test1_aerodynamics.vcxproj  test1_aerodynamics.vcxproj.filters
FD2D/: CMakeLists.txt
FD2D/Source/: CMakeLists.txt
FD2D/Source/adjoint/include/: AdjointControl.h  AdjointStateSpace.h  trapz_step.h
FD2D/Source/adjoint/src/: AdjointControl.cpp  AdjointStateSpace.cpp
FD2D/Source/aero/: CMakeLists.txt
FD2D/Source/aero/include/: Aerodynamics.h  Control.h  EngineMap.h  Poly.h  RK4.h  State.h  StateSpace.h  UAV.h  aero_headers.h
FD2D/Source/aero/src/: Aerodynamics.cpp  Control.cpp  State.cpp  StateSpace.cpp  UAV.cpp
FD2D/adjoint_tests/: 2-autodiff_vs_centraldiff.cpp  3-Primal-Adjoint-run.cpp  5-adjoint-sensitivities.cpp  6-optimization-climb.cpp  7-debug-primal.cpp  CMakeLists.txt
FD2D/tests/: 0-rotations.cpp  1-takeoff.cpp  3-climb-theta_t.cpp  4-control-thrust.cpp  CMakeLists.txt  compare.cpp  test0_aerodynamics.cpp
Source/: CMakeLists.txt
Source/adjoint/: CMakeLists.txt
Source/adjoint/include/: AdjointControl.h  AdjointStateSpace.h  Jacobians.h
Source/adjoint/src/: AdjointStateSpace.cpp  Jacobians.cpp
Source/aero/include/: Aerodynamics.h  Control.h  EngineMap.h  Poly.h  RK4.h  State.h  StateSpace.h  UAV.h  utils.h
Source/aero/src/: Aerodynamics.cpp  Control.cpp  EngineMap.cpp  State.cpp  StateSpace.cpp  UAV.cpp
adjoint_src/: CMakeLists.txt
adjoint_src/include/: Jacobians.h
adjoint_tests/: CMakeLists.txt
adjoint_tests/src/: 1-Forces_check.cpp  2-autodiff_vs_centraldiff.cpp  3-Primal-Adjoint-run.cpp  4-Adjoint-Sensitivities.cpp  4-jacobians.cpp  5-Jacobians-test.cpp  6-optimization-climb.cpp  test1.cpp
executable_src/: endurance_example.cpp  maneuver_example.cpp  simulation_1.cpp
executables/: 1-mission_maneuver.cpp  CMakeLists.txt  simulation_1.cpp
include/: Aerodynamics.h  Airplane.h  Control.h  EngineMap.h  Scoring.h  State.h  StateSpace.h  UAV.h  header_files_catalog.h
main_executables/: CMakeLists.txt
main_executables/src/: endurance_example.cpp  main.cpp  maneuver_example.cpp  simulation_1.cpp
nfc_2025/: CMakeLists.txt
nfc_2025/include/: easy.h  maneuver_mission.h
nfc_2025/src/: easy.cpp  maneuver_mission.cpp
src/: Aerodynamics.cpp  Airplane.cpp  Control.cpp  EngineMap.cpp  Scoring.cpp  State.cpp  StateSpace.cpp  UAV.cpp
tests/: 1-easy.cpp  2-maneuver.cpp  CMakeLists.txt  class_UAV.cpp  class_aerodynamics.cpp  class_airplane.cpp  takeoff.cpp  test0_aerodynamics.cpp  test1_aerodynamics.cpp
tests/src/: 1_test_integrator.cpp  2-climb.cpp  2-climb_const_gamma.cpp  test1_aerodynamics.cpp
(+34 files in other folders)
